--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "url": "https://github.com/18xx/union-station"
   },
   "devDependencies": {
+    "@types/lodash.shuffle": "^4.2.5",
     "@types/react": "^16.8.3",
     "@types/react-dom": "^16.8.1",
     "prettier": "^1.16.4",
