--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "prettier": "^1.16.4",
     "tslint": "^5.12.1",
     "tslint-config-prettier": "^1.18.0",
+    "tslint-immutable": "^5.2.0",
     "tslint-loader": "^3.5.4",
     "tslint-plugin-prettier": "^2.0.1",
     "tslint-react": "^3.6.0"
