--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "gatsby-plugin-typescript": "^2.0.8",
     "gatsby-source-filesystem": "^2.0.20",
     "gatsby-transformer-sharp": "^2.1.13",
+    "lodash.range": "^3.2.0",
     "lodash.shuffle": "^4.2.0",
     "prop-types": "^15.6.2",
     "react": "^16.8.0",
@@ -39,6 +40,7 @@
     "url": "https://github.com/18xx/union-station"
   },
   "devDependencies": {
+    "@types/lodash.range": "^3.2.5",
     "@types/lodash.shuffle": "^4.2.5",
     "@types/react": "^16.8.3",
     "@types/react-dom": "^16.8.1",
