--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "gatsby-source-filesystem": "^2.0.20",
     "gatsby-transformer-sharp": "^2.1.13",
     "lodash.range": "^3.2.0",
+    "lodash.samplesize": "^4.2.0",
     "lodash.shuffle": "^4.2.0",
     "prop-types": "^15.6.2",
     "react": "^16.8.0",
@@ -41,6 +42,7 @@
   },
   "devDependencies": {
     "@types/lodash.range": "^3.2.5",
+    "@types/lodash.samplesize": "^4.2.6",
     "@types/lodash.shuffle": "^4.2.5",
     "@types/react": "^16.8.3",
     "@types/react-dom": "^16.8.1",
