--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,6 +2,7 @@
   "compilerOptions": {
     "allowJs": true,
     "allowSyntheticDefaultImports": true,
+    "incremental": true,
     "noUnusedLocals": true,
     "skipLibCheck": true,
     "sourceMap": true,
