--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "@types/lodash.shuffle": "^4.2.5",
     "@types/react": "^16.8.3",
     "@types/react-dom": "^16.8.1",
+    "@types/react-helmet": "^5.0.8",
     "prettier": "^1.16.4",
     "tslint": "^5.12.1",
     "tslint-config-prettier": "^1.18.0",
