--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "author": "Gregor MacDougall <gmacdougall0@gmail.com>",
   "dependencies": {
     "@material-ui/core": "4.0.0-alpha.6",
+    "@material-ui/icons": "^3.0.2",
     "gatsby": "^2.0.118",
     "gatsby-image": "^2.0.29",
     "gatsby-plugin-favicon": "^3.1.5",
