--- a/package.json
+++ b/package.json
@@ -55,8 +55,10 @@
     "@types/react-dom": "^16.8.1",
     "@types/react-helmet": "^5.0.8",
     "@typescript-eslint/eslint-plugin-tslint": "^2.19.0",
+    "eslint-config-prettier": "^6.10.0",
     "eslint-plugin-import": "^2.20.1",
     "eslint-plugin-prefer-arrow": "^1.1.7",
+    "eslint-plugin-prettier": "^3.1.2",
     "eslint-plugin-react": "^7.18.3",
     "prettier": "^1.16.4"
   },
