--- a/package.json
+++ b/package.json
@@ -36,7 +36,7 @@
   "scripts": {
     "build": "gatsby build",
     "develop": "gatsby develop",
-    "lint": "eslint --ignore-path .gitignore . --ext ts --ext tsx --cache",
+    "lint": "eslint --ignore-path .gitignore . --ext ts --ext tsx",
     "lint:fix": "yarn lint --fix",
     "start": "npm run develop",
     "serve": "gatsby serve",
@@ -54,7 +54,9 @@
     "@types/react": "^16.8.3",
     "@types/react-dom": "^16.8.1",
     "@types/react-helmet": "^5.0.8",
-    "@typescript-eslint/eslint-plugin-tslint": "^2.19.0",
+    "@typescript-eslint/eslint-plugin": "^2.19.0",
+    "@typescript-eslint/parser": "^2.19.0",
+    "eslint": "^6.8.0",
     "eslint-config-prettier": "^6.10.0",
     "eslint-plugin-functional": "^3.0.1",
     "eslint-plugin-import": "^2.20.1",
