Upgrade all sorts of things

--- a/package.json
+++ b/package.json
@@ -5,29 +5,29 @@
   "version": "0.1.0",
   "author": "Gregor MacDougall <gmacdougall0@gmail.com>",
   "dependencies": {
-    "@material-ui/core": "4.0.0-alpha.6",
-    "@material-ui/icons": "^3.0.2",
-    "gatsby": "^2.0.118",
-    "gatsby-image": "^2.0.29",
-    "gatsby-plugin-favicon": "^3.1.5",
+    "@material-ui/core": "4.12.3",
+    "@material-ui/icons": "^4.11.2",
+    "gatsby": "^3.11.1",
+    "gatsby-image": "^3.11.0",
     "gatsby-plugin-html-attributes": "^1.0.5",
-    "gatsby-plugin-manifest": "^2.0.17",
-    "gatsby-plugin-offline": "^2.0.23",
-    "gatsby-plugin-react-helmet": "^3.0.6",
-    "gatsby-plugin-sharp": "^2.0.20",
-    "gatsby-plugin-typescript": "^2.0.8",
-    "gatsby-source-filesystem": "^2.0.20",
-    "gatsby-transformer-sharp": "^2.1.13",
+    "gatsby-plugin-manifest": "^3.11.0",
+    "gatsby-plugin-netlify": "^3.11.0",
+    "gatsby-plugin-offline": "^4.11.0",
+    "gatsby-plugin-react-helmet": "^4.11.0",
+    "gatsby-plugin-sharp": "^3.11.0",
+    "gatsby-plugin-typescript": "^3.11.0",
+    "gatsby-source-filesystem": "^3.11.0",
+    "gatsby-transformer-sharp": "^3.11.0",
     "lodash.range": "^3.2.0",
     "lodash.samplesize": "^4.2.0",
     "lodash.shuffle": "^4.2.0",
-    "mdi-material-ui": "^5.10.0",
-    "prop-types": "^15.6.2",
-    "react": "^16.8.0",
-    "react-dom": "^16.8.0",
-    "react-helmet": "^5.2.0",
-    "typeface-roboto": "^0.0.54",
-    "typescript": "^3.3.3"
+    "mdi-material-ui": "^6.22.1",
+    "prop-types": "^15.7.2",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
+    "react-helmet": "^6.1.0",
+    "typeface-roboto": "^1.1.13",
+    "typescript": "^4.3.5"
   },
   "keywords": [
     "gatsby"
@@ -35,7 +35,7 @@
   "license": "MIT",
   "scripts": {
     "build": "gatsby build",
-    "develop": "gatsby develop",
+    "develop": "gatsby develop --port 8001",
     "lint": "eslint --ignore-path .gitignore . --ext ts --ext tsx",
     "lint:fix": "yarn lint --fix",
     "start": "npm run develop",
@@ -48,22 +48,22 @@
     "url": "https://github.com/18xx/union-station"
   },
   "devDependencies": {
-    "@types/lodash.range": "^3.2.5",
+    "@types/lodash.range": "^3.2.6",
     "@types/lodash.samplesize": "^4.2.6",
-    "@types/lodash.shuffle": "^4.2.5",
-    "@types/react": "^16.8.3",
-    "@types/react-dom": "^16.8.1",
-    "@types/react-helmet": "^5.0.8",
-    "@typescript-eslint/eslint-plugin": "^2.19.0",
-    "@typescript-eslint/parser": "^2.19.0",
-    "eslint": "^6.8.0",
-    "eslint-config-prettier": "^6.10.0",
-    "eslint-plugin-functional": "^3.0.1",
-    "eslint-plugin-import": "^2.20.1",
-    "eslint-plugin-prefer-arrow": "^1.1.7",
-    "eslint-plugin-prettier": "^3.1.2",
-    "eslint-plugin-react": "^7.18.3",
-    "prettier": "^1.16.4"
+    "@types/lodash.shuffle": "^4.2.6",
+    "@types/react": "^17.0.18",
+    "@types/react-dom": "^17.0.9",
+    "@types/react-helmet": "^6.1.2",
+    "@typescript-eslint/eslint-plugin": "^4.29.1",
+    "@typescript-eslint/parser": "^4.29.1",
+    "eslint": "^7.32.0",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-functional": "^3.6.0",
+    "eslint-plugin-import": "^2.24.0",
+    "eslint-plugin-prefer-arrow": "^1.2.3",
+    "eslint-plugin-prettier": "^3.4.0",
+    "eslint-plugin-react": "^7.24.0",
+    "prettier": "^2.3.2"
   },
   "prettier": {
     "singleQuote": true,
